[tool.poetry]
name = "tdd_by_python"
version = "0.1.0"
description = ""
authors = ["Kenya Nonaka <kenya.nonaka@uzabase.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.1.2"
flake8 = "^4.0.1"
black = "^22.3.0"

[tool.poetry.dev-dependencies]
mypy = "^0.961"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
